create api sign-up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 spring.application.name=project management
+
+springdoc.swagger-ui.path=/swagger-ui.html
+# Common datasource settings (driver, pool, etc.)
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=10
+
+# Common JPA
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+# Local Postgres or H2
+spring.datasource.url=jdbc:postgresql://localhost:5432/project_management
+spring.datasource.username=myuser
+spring.datasource.password=mypass
+
+# Tell Hibernate to manage the schema
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# (Optional but helpful) Show the generated SQL in the console:
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# For Postgres, explicitly set the dialect (Hibernate usually auto-detects this):
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway
+spring.flyway.locations=classpath:db/migration
+
+logging.level.root=INFO
